# claude-code-best-practices

./: README.md  pyproject.toml
.claude-plugin/: marketplace.json
research/: Claude Code Newsletter.md  anthropic-claude-code-best-practices.md  artifacts-implementation-research.md  beads-task-tracking-system.md  claude-canvas-research.md  claude-code-mobile-research.md  claude-code-plugins-research.md  claude-md-best-practices.md  claude_code_for_lawyers_leverage.md  claude_code_getting_started.md  claude_code_intro_parkerstyle.md  claude_code_pitch_email.md  context-management-research.md  december_2025_buckle_up.md  december_2025_buckle_up_v2.md  gastown-orchestration-framework.md  karpathy_programming_transformation_dec2025.md  lawyers-ai-coding-research.md  llm-ui-frameworks-research.md  memory-mcp-servers.md  memory-official-docs.md  memory-systems-research.md  memory-twitter-discussions.md  memory-web-research.md  multi-agent-orchestration-patterns.md  nysba_agentic_ai_vibe_coding_cle.md  plugin-context-injection.md  ralph-wiggum-autonomous-loops.md  semantic-tools-and-search-patterns.md  slash-command-cli-research.md  titans-architecture-research.md
skills/best-practices/: SKILL.md  install.sh
skills/best-practices/claude-md/: SKILL.md  index.md
skills/best-practices/context-injection/: SKILL.md  index.md
skills/best-practices/plugin-authoring/: SKILL.md  index.md
skills/best-practices/python-setup/: index.md  test-setup.sh
skills/best-practices/sessions/: SKILL.md  index.md  install.sh
skills/best-practices/skill-creator/: SKILL.md  index.md
skills/cc-dev/: SKILL.md  install.sh
skills/cc-dev/debugging/: index.md
skills/cc-dev/plugin-authoring/: index.md
skills/cc-dev/python-setup/: index.md  test-setup.sh
skills/introspect/: SKILL.md  install.sh
skills/sessions/: SKILL.md  conftest.py  install.sh
skills/skill-creator/: SKILL.md
src/cc_best_practices/: __init__.py
tests/: conftest.py
(+28 files in other folders)
