[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-best-practices"
version = "0.1.0"
description = "Best practices tools for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "SanctionedCodeList" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-markdown-docs>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cc_best_practices"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
