[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-dev"
version = "0.1.0"
description = "Claude Code development tools"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "SanctionedCodeList" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-markdown-docs>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cc_dev"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
